# oma

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  _typos.toml  build.rs  cliff.toml  i18n.toml  io.aosc.oma.apply.policy  justfile
.cargo/: config.toml
.github/workflows/: 1.yml  check-typo.yml  create-pull-request-final.yml  create-pull-request-rc.yml  create-pull-request.yml  deb.yml  deb_amd64.yml  deb_arm64.yml  deb_loong64.yml  known_hosts  release.yml  rust.yml
apt-auth-config/: Cargo.toml
apt-auth-config/src/: lib.rs  parser.rs  reqwuest.rs
apt-history/: Cargo.toml
apt-history/examples/: read_history.rs
apt-history/src/: lib.rs
data/apt.conf.d/: 50oma.conf
data/command-not-found/: README.md  command-not-found.fish  command-not-found.sh
data/completions/: oma.bash  oma.bash.debian  oma.fish  oma.fish.debian
data/config/: oma-debian.toml  oma.toml
data/dbus/: oma-dbus.conf
data/installer/: get-oma.sh
data/man/: oma-clean.1  oma-depends.1  oma-download.1  oma-files.1  oma-fix-broken.1  oma-history.1  oma-install.1  oma-list.1  oma-mark.1  oma-mirror.1  oma-pick.1  oma-provides.1  oma-rdepends.1  oma-refresh.1  oma-remove.1  oma-search.1  oma-show.1  oma-topics.1  oma-tui.1  oma-undo.1  oma-upgrade.1  oma-version.1  oma.1
data/man/en_US/: oma-clean.1  oma-depends.1  oma-download.1  oma-files.1  oma-fix-broken.1  oma-install.1  oma-list.1  oma-mark.1  oma-pick.1  oma-provides.1  oma-rdepends.1  oma-refresh.1  oma-remove.1  oma-search.1  oma-show.1  oma-size-analyzer.1  oma-tree.1  oma-tui.1  oma-undo.1  oma-upgrade.1  oma-why.1  oma.1
data/man/zh_CN/: oma-clean.1  oma-depends.1  oma-download.1  oma-files.1  oma-fix-broken.1  oma-history.1  oma-install.1  oma-list.1  oma-mark.1  oma-pick.1  oma-provides.1  oma-rdepends.1  oma-refresh.1  oma-remove.1  oma-search.1  oma-show.1  oma-size-analyzer.1  oma-tree.1  oma-tui.1  oma-undo.1  oma-upgrade.1  oma-version.1  oma-why.1  oma.1
data/man/zh_TW/: oma-clean.1  oma-depends.1  oma-download.1  oma-files.1  oma-fix-broken.1  oma-history.1  oma-install.1  oma-list.1  oma-mark.1  oma-pick.1  oma-provides.1  oma-rdepends.1  oma-refresh.1  oma-remove.1  oma-search.1  oma-show.1  oma-size-analyzer.1  oma-tree.1  oma-tui.1  oma-undo.1  oma-upgrade.1  oma-why.1  (+2 more)
data/policykit/: io.aosc.oma.apply.policy
data/systemd/: oma-update.service
demo/: tour.avif
i18n/en-US/: oma.ftl  oma_refresh.ftl
i18n/zh-CN/: oma.ftl  oma_refresh.ftl
i18n/zh-TW/: oma.ftl
man/: oma.1
oma-apt-config/: Cargo.toml
oma-apt-config/src/: lib.rs
oma-apt-pkg/: Cargo.toml
oma-apt-pkg/src/: apt_db.rs  apt_lists.rs  dep.rs  dpkg.rs  dpkg_state.rs  error.rs  lib.rs  search.rs
oma-console/: CHANGELOG.md  Cargo.toml
oma-console/examples/: msg.rs  pager.rs
oma-console/src/: console.rs  lib.rs  pager.rs  pb.rs  print.rs  terminal.rs  writer.rs
oma-contents/: CHANGELOG.md  Cargo.toml
oma-contents/examples/: list_files.rs  list_files_rg.rs
oma-contents/src/: lib.rs  parser.rs  searcher.rs
oma-fetch/: CHANGELOG.md  Cargo.toml  i18n.toml
oma-fetch/examples/: downloads.rs
oma-fetch/src/: checksum.rs  download.rs  lang.rs  lib.rs
oma-fetcher/: Cargo.toml
oma-fetcher/examples/: downloads.rs
oma-fetcher/src/: download.rs  lib.rs
oma-history/: Cargo.toml
oma-history/examples/: last_upgrade_date.rs
oma-history/src/: lib.rs  migrations.rs
oma-i18n/: Cargo.toml  i18n.toml
oma-mirror/: Cargo.toml
oma-mirror/examples/: parse_mirror_config.rs  parse_template.rs
oma-mirror/examples/mirror_config/: 1.toml
oma-mirror/examples/mirror_templates/: 1.toml  2.toml
oma-mirror/src/: lib.rs  parser.rs
oma-pm/: CHANGELOG.md  Cargo.toml
oma-pm-operation-type/: Cargo.toml
oma-pm-operation-type/src/: lib.rs
oma-pm/examples/: download_pkgs.rs  install_fish.rs  perf_test_1.rs
oma-pm/src/: apt.rs  commit.rs  db.rs  dbus.rs  download.rs  dpkg.rs  lib.rs  lock.rs  matches.rs  operation.rs  opration.rs  pkginfo.rs  progress.rs  query.rs  search.rs  sort.rs  unmet.rs  utils.rs
oma-pm/test_file/: Packages
oma-refresh/: .gitignore  CHANGELOG.md  Cargo.toml  i18n.toml
oma-refresh/examples/: update.rs
oma-refresh/src/: auth.rs  config.rs  db.rs  decompress.rs  inrelease.rs  lang.rs  lib.rs  sourceslist.rs  util.rs  verify.rs
oma-repo-verify/: Cargo.toml
oma-repo-verify/src/: lib.rs
oma-topics/: CHANGELOG.md  Cargo.toml
oma-topics/examples/: menu.rs
oma-topics/src/: lib.rs
oma-tum/: Cargo.toml
oma-tum/examples/: tum.rs
oma-tum/examples/tum/: updates.json
oma-tum/examples/tum/var/lib/apt/lists/: updates.json
oma-tum/src/: lib.rs  parser.rs
oma-ubuntu-cmd-not-found/: Cargo.toml
oma-ubuntu-cmd-not-found/src/: lib.rs
oma-utils/: CHANGELOG.md  Cargo.toml
oma-utils/src/: lib.rs
oma-utils/src/dbus/: mod.rs
oma-utils/src/dpkg/: mod.rs
oma-utils/src/human_bytes/: mod.rs
oma-utils/src/oma/: mod.rs
oma-utils/src/url_no_escape/: mod.rs
scripts/: clean-unused-translate-entry.py  clean_unused_translate_entry.py  find-i18n-key-dups.rkt
src/: action.rs  args.rs  args_v2.rs  blackbox.rs  checksum.rs  clap_cli.rs  clap_err.rs  cli.rs  command.rs  completions.rs  config.rs  config_file.rs  contents.rs  db.rs  dbus.rs  download.rs  egg.rs  error.rs  exit_handle.rs  formatter.rs  history.rs  i18n.rs  install_progress.rs  lang.rs  lib.rs  logger.rs  main.rs  menu.rs  oma.rs  pager.rs  path_completions.rs  pb.rs  pkg.rs  pkgversion.rs  polkit.rs  prompt.rs  root.rs  search.rs  table.rs  topics.rs  (+3 more)
src/core/: commit_changes.rs  mod.rs  operation_pipeline.rs  refresh.rs
src/subcommand/: clean.rs  command_not_found.rs  completions.rs  contents_find.rs  dbus.rs  depends.rs  download.rs  fix_broken.rs  gencache.rs  generate.rs  history.rs  install.rs  list.rs  mark.rs  mirror.rs  mod.rs  pick.rs  pkgnames.rs  rdepends.rs  refresh.rs  remove.rs  search.rs  show.rs  size_analyzer.rs  topics.rs  tree.rs  tui.rs  tui_deprecated.rs  undo.rs  upgrade.rs  utils.rs
src/tui/: key_binding.rs  mod.rs  refresh.rs  render.rs  state.rs  tui.rs  tui_inner.rs  window.rs
(+8 files in other folders)
