[package]
name = "oma"
version = "1.21.0-alpha.0"
edition = "2024"
description = "User-friendly and performant package manager for APT repositories"
license = "GPL-3.0-or-later"
authors = ["eatradish <sakiiily@aosc.io>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Cli
clap = { version = "4.5.19", features = ["cargo", "wrap_help", "color", "derive", "env"] }
anyhow = "1.0.89"
ctrlc = "3.4.5"
dialoguer = "0.12.0"
tabled = { version = "0.20", features = ["ansi"] }
tokio = "1.46.0"
oma-inquire = "0.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
toml = "0.9"
chrono = "0.4.38"
rustix = { version = "1", features = ["process", "stdio"] }
libc = "0.2.159"
reqwest = { version = "0.12.8", default-features = false }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
smallvec = "1.13.2"
console-subscriber = { version = "0.4.0", optional = true }
ratatui = "0.29.0"
ansi-to-tui = "7.0.0"
glob-match = "0.2.1"
which = "8"
strsim = "0.11.1"
ahash = "0.8.11"
indexmap = "2.10"
faster-hex = "0.10"
sha2 = "0.10"
bon = "3"
flume = "0.11"
enum_dispatch = "0.3"
clap_mangen = "0.2.23"
clap_complete = { version = "4.5", features = ["unstable-dynamic"] }
clap_lex = "0.7.4"
fs4 = "0.13.1"
fs_extra = "1.3.0"
tracing-appender = "0.2.3"
dirs = "6.0.0"
termtree = "0.5.1"
textwrap = "0.16.2"
sysinfo = "0.37"
once_cell = "1.21"

# oma crates
oma-utils = { path = "./oma-utils", features = ["dbus", "human-bytes", "oma"] }
oma-console = { path = "./oma-console" }
oma-pm = { path = "./oma-pm" }
oma-refresh = { path = "./oma-refresh", default-features = false }
oma-contents = { path = "./oma-contents" }
oma-fetch = { path = "./oma-fetch", default-features = false }
oma-topics = { path = "./oma-topics", optional = true, default-features = false }
oma-history = { path = "./oma-history" }
oma-repo-verify = { path = "./oma-repo-verify", default-features = false }
oma-mirror = { path = "./oma-mirror", optional = true }
apt-auth-config = { path = "./apt-auth-config" }
oma-tum = { path = "./oma-tum", optional = true }

# i18n
i18n-embed = { version = "0.16.0", features = ["fluent-system", "desktop-requester"]}
i18n-embed-fl = "0.10"
rust-embed = "8.5.0"
unic-langid = "0.9.5"
sys-locale = "0.3"

[features]
aosc = ["dep:oma-topics", "oma-refresh/aosc", "oma-pm/aosc", "oma-contents/aosc", "dep:oma-mirror", "reqwest/blocking", "dep:oma-tum"]
mirror = []
sequoia-openssl-backend = ["oma-refresh/sequoia-openssl-backend"]
sequoia-nettle-backend = ["oma-refresh/sequoia-nettle-backend"]
tokio-console = ["dep:console-subscriber"]
rustls = ["reqwest/rustls-tls", "oma-fetch/rustls", "oma-refresh/rustls", "oma-topics/rustls"]
openssl = ["reqwest/native-tls", "oma-fetch/native-tls", "oma-refresh/native-tls", "oma-topics/native-tls"]
nice-setup = ["sequoia-nettle-backend", "rustls", "oma-refresh/apt"]
openssl-setup = ["sequoia-openssl-backend", "openssl", "oma-refresh/apt"]
default = ["aosc", "nice-setup", "mirror"]

[workspace]
members = ["oma-contents", "oma-console", "oma-topics", "oma-fetch", "oma-refresh", "oma-utils", "oma-pm", "oma-history", "oma-pm-operation-type", "oma-repo-verify", "oma-mirror", "apt-auth-config", "oma-tum"]

[package.metadata.deb]
copyright = "2025, AOSC Dev <maintainers@aosc.io>"
maintainer = "eatradish <sakiiily@aosc.io>"
license-file = ["COPYING", "4"]
extended-description = "User-friendly and performant package manager for APT repositories"
depends = "$auto"
section = "admin"
priority = "optional"
assets = [
    ["target/release/oma", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/oma/README", "644"],
    ["data/config/oma-debian.toml", "etc/oma.toml", "644"],
    ["data/apt.conf.d/50oma-debian.conf", "etc/apt/apt.conf.d/50oma.conf", "644"],
    ["data/dbus/oma-dbus.conf", "usr/share/dbus-1/system.d/oma-dbus.conf", "644"],
    ["data/policykit/io.aosc.oma.apply.policy", "usr/share/polkit-1/actions/io.aosc.oma.apply.policy", "644" ],
    ["completions/oma.bash", "usr/share/bash-completion/completions/oma.bash", "644"],
    ["completions/oma.fish", "usr/share/fish/vendor_completions.d/oma.fish", "644"],
    ["completions/_oma", "usr/share/zsh/functions/Completion/Linux/_oma", "644"],
    ["man/*.1", "usr/share/man/man1/", "644"]
]
features = ["nice-setup"]
default-features = false

[profile.release]
lto = "thin"
opt-level = 3
codegen-units = 1
