[package]
name = "oma"
version = "1.28.0-dev"
edition = "2024"
description = "User-friendly and performant package manager for APT repositories"
license = "GPL-3.0-or-later"
authors = ["eatradish <sakiiily@aosc.io>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Cli
clap = { workspace = true }
anyhow = { workspace = true }
ctrlc = { workspace = true }
tabled = { workspace = true }
tokio = { workspace = true }
oma-inquire = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
rustix = { workspace = true, features = ["process", "stdio"] }
libc = { workspace = true }
reqwest = { workspace = true, default-features = false, features = ["http2"] }
rustls = { workspace = true, default-features = false, features = [
    "ring",
    "tls12",
], optional = true }
spdlog-rs = { workspace = true, features = [
    "multi-thread",
    "source-location",
    "log",
] }
console-subscriber = { workspace = true, optional = true }
ratatui = { workspace = true }
ansi-to-tui = { workspace = true }
glob-match = { workspace = true }
strsim = { workspace = true }
ahash = { workspace = true }
indexmap = { workspace = true }
faster-hex = { workspace = true }
sha2 = { workspace = true }
bon = { workspace = true }
flume = { workspace = true }
enum_dispatch = { workspace = true }
clap_mangen = { workspace = true }
clap_complete = { workspace = true, features = ["unstable-dynamic"] }
clap_lex = { workspace = true }
fs4 = { workspace = true }
fs_extra = { workspace = true }
dirs = { workspace = true }
termtree = { workspace = true }
textwrap = { workspace = true }
sysinfo = { workspace = true }
once_cell = { workspace = true }
clap-i18n-richformatter = { workspace = true }
debversion = { workspace = true }
which = { workspace = true }
rayon = { workspace = true }
humantime = { workspace = true }
env_filter = { workspace = true }
terminfo = { workspace = true }
digest-io = { workspace = true }
reqwest-middleware = { workspace = true }
tui-input = { workspace = true }
zbus = { workspace = true }

# oma crates
oma-utils = { workspace = true }
oma-console = { workspace = true }
oma-pm = { workspace = true }
oma-refresh = { workspace = true, default-features = false }
oma-contents = { workspace = true }
oma-fetch = { workspace = true, default-features = false }
oma-topics = { workspace = true, optional = true, default-features = false }
oma-history = { workspace = true }
oma-repo-verify = { workspace = true, default-features = false }
oma-mirror = { workspace = true, optional = true }
apt-auth-config = { workspace = true }
oma-tum = { workspace = true, optional = true }

# i18n
i18n-embed = { workspace = true }
i18n-embed-fl = { workspace = true }
rust-embed = { workspace = true }

[workspace.dependencies]
clap = { version = "4.6", features = [
    "cargo",
    "wrap_help",
    "color",
    "derive",
    "env",
    "string",
] }
humantime = "2.3"
termtree = "1"
env_filter = "0.1.4"
clap-i18n-richformatter = "0.3.0"
terminfo = "0.9.0"
fs_extra = "1.3.0"
enum_dispatch = "0.3"
clap_mangen = "0.3"
clap_complete = { version = "4.6", features = ["unstable-dynamic"] }
clap_lex = "1"
console-subscriber = "0.5.0"
tabled = { version = "0.21", features = ["ansi"] }
ctrlc = "3.5"
anyhow = "1.0.89"
tokio = { version = "1.46.0", default-features = false }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
toml = "1"
chrono = "0.4.38"
rustix = { version = "1", features = ["process", "stdio"] }
libc = "0.2.159"
reqwest = { version = "0.13", default-features = false, features = ["http2"] }
spdlog-rs = "0.5.2"
ratatui = "0.30.0"
glob-match = "0.2.1"
strsim = "0.11.1"
ahash = "0.8.11"
indexmap = "2.11.3"
faster-hex = "0.10"
sha2 = "0.11"
bon = "3"
fs4 = "1"
dirs = "6.0.0"
textwrap = "0.16.2"
sysinfo = { version = "0.39", default-features = false, features = ["system"] }
once_cell = "1.21"
debversion = "0.5"
which = "8"
digest-io = "0.1"
ansi-to-tui = "8.0.0"
rayon = "1.11.0"
thiserror = "2"
url = "2.5"
aho-corasick = "1.1.3"
regex = "1.8"
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "tls12",
] }
futures = "0.3"
snafu = "0.9"
flume = "0.12"
rust-netrc = "0.1"
termbg = { version = "0.1", package = "termbg-with-async-stdin" }
console = "0.16"
indicatif = "0.18"
winnow = "1"
flate2 = "1.0"
lzzzz = "2.0"
zstd = "0.13"
memchr = "2"
async-compression = "=0.4.27"
liblzma = { version = "0", features = ["uncheck_liblzma_version"] }
tokio-util = { version = "0.7", features = ["compat"] }
md-5 = "0.11"
headers = "0.4.1"
rusqlite = { version = "0.40", features = ["bundled"] }
indicium = "0.6"
cxx = "1.0.196"
deb822-lossless = "0.5"
deb822-fast = { version = "0.2", features = ["derive"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
num_enum = "0.7.3"
sys-locale = "0.3"
fancy-regex = "0.18"
sequoia-openpgp = { version = "2", default-features = false }
sequoia-policy-config = "0.8"
logos = "0.16"
number_prefix = "0.4"
os-release = "0.1"
url-escape = "0.1"
logind-zbus = { version = "5.1", default-features = false, features = [
    "tokio",
], package = "logind-zbus-tokio" }
nix = "0.31"
# i18n
i18n-embed = { version = "0.16.0", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = { version = "0.10.0", package = "i18n-embed-fl-no-check-hashmap-on-ra" }
rust-embed = "8.11.0"
reqwest-middleware = "0.5"
http = "1.4.2"
tui-input = { version = "0.15", features = ["ratatui"] }

# oma crates
oma-utils = { version = "0.13.1", path = "./oma-utils", default-features = false }
oma-console = { version = "0.31.0", path = "./oma-console" }
oma-pm = { version = "0.64.0", path = "./oma-pm" }
oma-refresh = { version = "0.56.1", path = "./oma-refresh", default-features = false }
oma-contents = { version = "0.19.1", path = "./oma-contents" }
oma-fetch = { version = "0.38.0", path = "./oma-fetch", default-features = false }
oma-topics = { version = "0.28.0", path = "./oma-topics", default-features = false }
oma-history = { version = "0.11.0", path = "./oma-history" }
oma-repo-verify = { version = "0.10.0", path = "./oma-repo-verify", default-features = false }
oma-mirror = { version = "0.8.2", path = "./oma-mirror" }
apt-auth-config = { version = "0.6.0", path = "./apt-auth-config" }
oma-tum = { version = "0.6.1", path = "./oma-tum" }
oma-pm-operation-type = { version = "0.10.1", path = "./oma-pm-operation-type" }
oma-apt = "0.13"
oma-apt-sources-lists = "0.9"
oma-inquire = "0.5"

[features]
aosc = [
    "dep:oma-topics",
    "oma-refresh/aosc",
    "oma-pm/aosc",
    "oma-contents/aosc",
    "dep:oma-mirror",
    "reqwest/blocking",
    "dep:oma-tum",
    "decompress-parallel",
]
sequoia-openssl-backend = ["oma-refresh/sequoia-openssl-backend"]
sequoia-nettle-backend = ["oma-refresh/sequoia-nettle-backend"]
tokio-console = ["dep:console-subscriber"]
rustls = [
    "reqwest/rustls-no-provider",
    "dep:rustls",
    "oma-fetch/rustls",
    "oma-refresh/rustls",
    "oma-topics/rustls",
]
openssl = [
    "reqwest/native-tls",
    "oma-fetch/native-tls",
    "oma-refresh/native-tls",
    "oma-topics/native-tls",
]
nice-setup = ["sequoia-nettle-backend", "rustls", "oma-refresh/apt"]
openssl-setup = ["sequoia-openssl-backend", "openssl", "oma-refresh/apt"]
decompress-parallel = ["oma-fetch/xz-parallel"]
default = ["aosc", "nice-setup"]

[workspace]
members = [
    "oma-contents",
    "oma-console",
    "oma-topics",
    "oma-fetch",
    "oma-refresh",
    "oma-utils",
    "oma-pm",
    "oma-history",
    "oma-pm-operation-type",
    "oma-repo-verify",
    "oma-mirror",
    "apt-auth-config",
    "oma-tum",
]

[package.metadata.deb]
copyright = "2026, AOSC Dev <maintainers@aosc.io>"
maintainer = "eatradish <sakiiily@aosc.io>"
license-file = ["COPYING", "4"]
extended-description = "User-friendly and performant package manager for APT repositories"
depends = "$auto"
section = "admin"
priority = "optional"
assets = [
    [
        "target/release/oma",
        "usr/bin/",
        "755",
    ],
    [
        "README.md",
        "usr/share/doc/oma/README",
        "644",
    ],
    [
        "data/config/oma-debian.toml",
        "etc/oma.toml",
        "644",
    ],
    [
        "data/apt.conf.d/50oma-debian.conf",
        "etc/apt/apt.conf.d/50oma.conf",
        "644",
    ],
    [
        "data/dbus/oma-dbus.conf",
        "usr/share/dbus-1/system.d/oma-dbus.conf",
        "644",
    ],
    [
        "data/policykit/io.aosc.oma.apply.policy",
        "usr/share/polkit-1/actions/io.aosc.oma.apply.policy",
        "644",
    ],
    [
        "completions/oma.bash",
        "usr/share/bash-completion/completions/oma.bash",
        "644",
    ],
    [
        "completions/oma.fish",
        "usr/share/fish/vendor_completions.d/oma.fish",
        "644",
    ],
    [
        "completions/_oma",
        "usr/share/zsh/functions/Completion/Linux/_oma",
        "644",
    ],
    [
        "data/man/en_US/*.1",
        "usr/share/man/man1/",
        "644",
    ],
    [
        "data/man/zh_CN/*.1",
        "usr/share/man/zh_CN/man1/",
        "644",
    ],
    [
        "data/man/zh_TW/*.1",
        "usr/share/man/zh_TW/man1/",
        "644",
    ],
]

features = ["nice-setup"]
default-features = false

[profile.release]
lto = "thin"
opt-level = 3
codegen-units = 1
