[package]
name = "apt-auth-config"
version = "0.4.0"
edition = "2024"
description = "Library to parse APT auth.conf.d configurations"
license = "MIT"

[dependencies]
thiserror = "2"
spdlog-rs = { git = "https://github.com/SpriteOvO/spdlog-rs.git", branch = "sink-decouple", optional = true }
tracing = { version = "0.1", optional = true }
rust-netrc = "0.1"
url = "2.5"

[features]
spdlog-rs = ["dep:spdlog-rs"]
tracing = ["dep:tracing"]
