[package]
name = "apt-auth-config"
version = "0.6.0"
edition = "2024"
description = "Library to parse APT auth.conf.d configurations"
license = "MIT"

[dependencies]
thiserror = { workspace = true }
spdlog-rs = { workspace = true }
rust-netrc = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
http = { workspace = true }
