[package]
name = "oma-apt-pkg"
version = "0.1.0"
edition = "2021"
description = "Rust-native parser for dpkg status and APT list files (deb822 format)"
license = "GPL-3.0-or-later"
authors = ["eatradish <sakiiily@aosc.io>"]

[dependencies]
deb822-lossless = { workspace = true, features = ["deb822-fast"] }
deb822-fast = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
ahash = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
indicium = { workspace = true }
debversion = { workspace = true }
bincode = { version = "2", features = ["serde"] }
spdlog-rs = { workspace = true }
