[package]
name = "oma-apt-pkg"
version = "0.2.1"
edition = "2024"
description = "Rust-native parser for dpkg status and APT list files (deb822 format)"
license = "MIT"
authors = ["eatradish <sakiiily@aosc.io>"]

[dependencies]
deb822-fast = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
ahash = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
indicium = { workspace = true }
debversion = { workspace = true }
spdlog-rs = { workspace = true }
glob-match = { workspace = true }
memchr = { workspace = true }
strsim = { workspace = true }
winnow = { workspace = true }
wincode = { workspace = true }
