[package]
name = "oma-console"
version = "0.29.2"
edition = "2024"
description = "Console and terminal emulator handling library used by oma"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = { version = "0.16", optional = true }
indicatif = { version = "0.18", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber =  { version = "0.3", optional = true }
ratatui = { version = "0.29", optional = true }
# https://github.com/async-rs/async-std/issues/1055
# https://github.com/tokio-rs/tokio/issues/5535
termbg = { version = "0.1", package = "termbg-with-async-stdin", optional = true }
ansi-to-tui = { version = "7.0", optional = true }
textwrap = { version = "0.16", optional = true }
aho-corasick = { version = "1.1.3", optional = true }

[features]
print = ["dep:tracing", "dep:tracing-subscriber", "dep:textwrap", "dep:console", "dep:termbg"]
pager = ["dep:ratatui", "dep:ansi-to-tui", "dep:console", "dep:aho-corasick"]
progress_bar_style = ["dep:indicatif"]
default = ["print", "pager", "progress_bar_style"]
