[package]
name = "oma-console"
version = "0.29.2"
edition = "2024"
description = "Console and terminal emulator handling library used by oma"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", optional = true }
console = { version = "0.16", optional = true }
indicatif = { version = "0.18", optional = true }
spdlog-rs = "0.5"
ratatui = { version = "0.30", optional = true }
# https://github.com/async-rs/async-std/issues/1055
# https://github.com/tokio-rs/tokio/issues/5535
termbg = { version = "0.1", package = "termbg-with-async-stdin", optional = true }
ansi-to-tui = { version = "8.0", optional = true }
textwrap = { version = "0.16", optional = true }
aho-corasick = { version = "1.1.3", optional = true }

[features]
print = ["dep:chrono", "dep:textwrap", "dep:console", "dep:termbg"]
pager = ["dep:ratatui", "dep:ansi-to-tui", "dep:console", "dep:aho-corasick"]
progress_bar_style = ["dep:indicatif"]
default = ["print", "pager", "progress_bar_style"]
