[package]
name = "oma-console"
version = "0.31.0"
edition = "2024"
description = "Console and terminal emulator handling library used by oma"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true, optional = true }
console = { workspace = true, optional = true }
indicatif = { workspace = true, optional = true }
spdlog-rs = { workspace = true }
ratatui = { workspace = true, optional = true }
# https://github.com/async-rs/async-std/issues/1055
# https://github.com/tokio-rs/tokio/issues/5535
termbg = { workspace = true , optional = true }
ansi-to-tui = { workspace = true, optional = true }
textwrap = { workspace = true, optional = true }
aho-corasick = { workspace = true, optional = true }

[features]
print = ["dep:chrono", "dep:textwrap", "dep:console", "dep:termbg"]
pager = ["dep:ratatui", "dep:ansi-to-tui", "dep:console", "dep:aho-corasick"]
progress_bar_style = ["dep:indicatif"]
default = ["print", "pager", "progress_bar_style"]
