[package]
name = "oma-contents"
version = "0.17.1"
edition = "2024"
description = "APT Contents metadata handling library"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.8"
thiserror = "2.0"
winnow = "0.7"
flate2 = "1.0"
rayon = "1.8"
lzzzz = "2.0"
tracing = { version = "0.1", optional = true }
spdlog-rs = { git = "https://github.com/SpriteOvO/spdlog-rs.git", branch = "sink-decouple", optional = true }
which = "8"
zstd = "0.13"
memchr = "2"

[features]
aosc = []
spdlog-rs = ["dep:spdlog-rs"]
tracing = ["dep:tracing"]
