[package]
name = "oma-contents"
version = "0.17.1"
edition = "2024"
description = "APT Contents metadata handling library"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.8"
thiserror = "2.0"
winnow = "0.7"
flate2 = "1.0"
rayon = "1.8"
lzzzz = "2.0"
spdlog-rs = "0.5"
which = "8"
zstd = "0.13"
memchr = "2"

[features]
aosc = []
