[package]
name = "oma-contents"
version = "0.19.1"
edition = "2024"
description = "APT Contents metadata handling library"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = { workspace = true }
thiserror = { workspace = true }
winnow = { workspace = true }
flate2 = { workspace = true }
rayon = { workspace = true }
lzzzz = { workspace = true }
spdlog-rs = { workspace = true }
which = { workspace = true }
zstd = { workspace = true }
memchr = { workspace = true }

[features]
aosc = []
