[package]
name = "oma-fetch"
version = "0.30.0"
edition = "2024"
description = "APT repository download routines library"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["stream"] }
tokio = { version = "1.28", default-features = false, features = ["fs"] }
serde = { version = "1.0", features = ["derive"] }
faster-hex = "0.10"
sha2 = "0.10"
futures = "0.3"
async-compression = { version = "0.4", features = ["gzip", "xz", "futures-io", "bzip2", "zstd"] }
# Note: Use the `uncheck_liblzma_version` feature here to force dynamic linking
# even with older liblzma (Ubuntu 22.04 uses 5.2.x). Be mindful, however, that
# async-compression depends on a different liblzma-rs than what is specified here.
liblzma = { version = "0", features = ["uncheck_liblzma_version"] }
tracing = "0.1"
tokio-util = { version = "0.7", features = ["compat"] }
md-5 = "0.10.6"
bon = "3"
snafu = "0.8.5"

[dev-dependencies]
tokio = { version = "1.42", features = ["macros", "rt-multi-thread"] }
flume = "0.11.1"

[features]
rustls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]
default = ["rustls"]
