[package]
name = "oma-fetch"
version = "0.36.0"
edition = "2024"
description = "APT repository download routines library"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.13", default-features = false, features = ["http2", "stream"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "tls12"], optional = true }
tokio = { version = "1.28", default-features = false, features = ["fs"] }
serde = { version = "1.0", features = ["derive"] }
faster-hex = "0.10"
sha2 = "0.10"
futures = "0.3"
# FIXME: issue https://github.com/AOSC-Dev/oma/issues/547, workaround downgrade to 0.4.27
async-compression = { version = "=0.4.27", features = ["gzip", "xz", "futures-io", "bzip2", "zstd", "lz4"] }
# Note: Use the `uncheck_liblzma_version` feature here to force dynamic linking
# even with older liblzma (Ubuntu 22.04 uses 5.2.x). Be mindful, however, that
# async-compression depends on a different liblzma-rs than what is specified here.
liblzma = { version = "0", features = ["uncheck_liblzma_version"] }
spdlog-rs = "0.5"
tokio-util = { version = "0.7", features = ["compat"] }
md-5 = "0.10.6"
bon = "3"
snafu = "0.8.5"
headers = "0.4.1"

[dev-dependencies]
tokio = { version = "1.42", features = ["macros", "rt-multi-thread"] }
flume = "0.12"

[features]
rustls = ["reqwest/rustls-no-provider", "dep:rustls"]
native-tls = ["reqwest/native-tls"]
default = ["rustls"]
