[package]
name = "oma-fetch"
version = "0.38.0"
edition = "2024"
description = "APT repository download routines library"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { workspace = true, default-features = false, features = [
    "http2",
    "stream",
] }
rustls = { workspace = true, default-features = false, features = [
    "ring",
    "tls12",
], optional = true }
tokio = { workspace = true, default-features = false, features = ["fs"] }
serde = { workspace = true, features = ["derive"] }
faster-hex = { workspace = true }
sha2 = { workspace = true }
futures = { workspace = true }
# FIXME: issue https://github.com/AOSC-Dev/oma/issues/547, workaround downgrade to 0.4.27
async-compression = { workspace = true, features = [
    "gzip",
    "xz",
    "futures-io",
    "bzip2",
    "zstd",
    "lz4",
] }
# Note: Use the `uncheck_liblzma_version` feature here to force dynamic linking
# even with older liblzma (Ubuntu 22.04 uses 5.2.x). Be mindful, however, that
# async-compression depends on a different liblzma-rs than what is specified here.
liblzma = { workspace = true, features = ["uncheck_liblzma_version"] }
spdlog-rs = { workspace = true }
tokio-util = { workspace = true, features = ["compat"] }
md-5 = { workspace = true }
bon = { workspace = true }
snafu = { workspace = true }
headers = { workspace = true }
digest-io = { workspace = true }
reqwest-middleware = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
flume = { workspace = true }

[features]
rustls = ["reqwest/rustls-no-provider", "dep:rustls"]
native-tls = ["reqwest/native-tls"]
default = ["rustls"]
xz-parallel = ["async-compression/xz-parallel"]
