[package]
name = "oma-fetcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
reqwest = "0.11.18"
tokio = { version = "1.28", default_features = false, features = ["rt", "fs", "io-util", "rt-multi-thread"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
sha2 = "0.10"
indicatif = "0.17"