[package]
name = "oma-history"
version = "0.8.1"
edition = "2024"
description = "Package manager operations history database management library"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oma-pm-operation-type = { version = "0.10", path = "../oma-pm-operation-type" }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
thiserror = "2"

[dev-dependencies]
chrono = "0.4"
