[package]
name = "oma-history"
version = "0.10.1"
edition = "2024"
description = "Package manager operations history database management library"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oma-pm-operation-type = { workspace = true }
rusqlite = { workspace = true, features = ["bundled"] }
serde = { workspace = true , features = ["derive"] }
serde_json = { workspace = true }
spdlog-rs = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
