[package]
name = "oma-mirror"
version = "0.7.0"
edition = "2024"
description = "Library to handle AOSC OS APT configuration (sources.list)"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snafu = "0.8.5"
indexmap = { version = "2.6", features = ["serde"] }
ahash = "0.8.11"
tracing = "0.1"
once_cell = "1.19"
toml = { version = "0.9", features = ["preserve_order"] }
