[package]
name = "oma-mirror"
version = "0.8.2"
edition = "2024"
description = "Library to handle AOSC OS APT configuration (sources.list)"
license = "MIT"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
ahash = { workspace = true }
spdlog-rs = { workspace = true }
once_cell = { workspace = true }
toml = { workspace = true, features = ["preserve_order"] }
