[package]
name = "oma-pm-operation-type"
version = "0.10.1"
edition = "2024"
license = "MIT"
description = "APT package management operation abstraction library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
oma-utils = { version = "^0.13.0", path = "../oma-utils", default-features = false, features = [
    "human-bytes",
] }
bon = "3"
num_enum = "0.7.3"
