[package]
name = "oma-pm-operation-type"
version = "0.10.1"
edition = "2024"
license = "MIT"
description = "APT package management operation abstraction library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
oma-utils = { workspace = true , default-features = false, features = [
    "human-bytes",
] }
bon = { workspace = true }
num_enum = { workspace = true }
