[package]
name = "oma-pm"
version = "0.59.2"
edition = "2024"
description = "APT package manager API abstraction library"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oma-apt = { git = "https://github.com/aosc-dev/oma-apt.git", rev = "b2171c27224628f670c3a7484ac678492a6df6c8" }
thiserror = "2"
chrono = { version = "0.4", features = ["unstable-locales"] }
glob-match = "0.2"
indicium = "0.6"
oma-utils = { version = "^0.12.0", path = "../oma-utils", features = [
    "dpkg",
    "url-no-escape",
    "human-bytes",
] }
oma-fetch = { version = "^0.34.0", path = "../oma-fetch" }
tokio = { version = "1.15", default-features = false, features = [
    "fs",
    "rt-multi-thread",
] }
fs4 = "0.13"
tracing = "0.1"
oma-pm-operation-type = { version = "0.10", path = "../oma-pm-operation-type" }
zbus = { version = "5.1", features = ["tokio"] }
cxx = "1.0.121"
ahash = "0.8.11"
bon = "3"
strsim = "0.11.1"
indexmap = "2"
memchr = "2"
serde = { version = "1", features = ["derive"] }
apt-auth-config = { version = "0.4.0", path = "../apt-auth-config" }
once_cell = "1.20"
sysinfo = { version = "0.37", optional = true }
deb822-lossless = "0.5"

[dev-dependencies]
flume = "0.12"

[features]
aosc = ["dep:sysinfo"]
