[package]
name = "oma-pm"
version = "0.63.0"
edition = "2024"
description = "APT package manager API abstraction library"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oma-apt = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true, features = ["unstable-locales"] }
glob-match = { workspace = true }
indicium = { workspace = true }
oma-utils = { workspace = true, features = [
    "dpkg",
    "url-no-escape",
    "human-bytes",
    "dbus",
] }
oma-fetch = { workspace = true }
tokio = { workspace = true, default-features = false, features = [
    "fs",
    "rt-multi-thread",
] }
fs4 = { workspace = true }
spdlog-rs = { workspace = true }
oma-pm-operation-type = { workspace = true }
zbus = { workspace = true, default-features = false, features = ["tokio"] }
cxx = { workspace = true }
ahash = { workspace = true }
bon = { workspace = true }
strsim = { workspace = true }
indexmap = { workspace = true }
memchr = { workspace = true }
serde = { workspace = true }
apt-auth-config = { workspace = true }
once_cell = { workspace = true }
sysinfo = { workspace = true, optional = true }
deb822-lossless = { workspace = true }
reqwest-middleware = { workspace = true }

[dev-dependencies]
flume = { workspace = true }

[features]
aosc = ["dep:sysinfo"]
